# daqua

./: Makefile  pyproject.toml
daqua/: __main__.py
daqua/jobs/: main.py
daqua/utils/: db_config.py  pg_spark.py
