[tool.poetry]
name = "daqua"
version = "0.0.1"
description = "Data Quality Tool"
authors = ["Vijay Kiran"]
readme = "README.md"
packages = [{include = "daqua"}]

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "^3.5.0"


[tool.poetry.group.dev.dependencies]
findspark = "^2.0.1"
pytest = "^7.2.1"
pytest-black = "^0.3.12"
pytest-isort = "^3.1.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.poetry.scripts]
daqua = "daqua.jobs.main:main"
